# Struct2FHIR

./: .gitignore  README.md  architecture_and_flow.md  main.py  main_async.py  pyproject.toml  requirements.txt
config/: schema.py
config/sources/: eicu_lab.yaml  example_lab.yaml
engine/: csv_reader.py  fhir_assembler.py  http_sender.py  transformer.py  validator.py
loinc/: __init__.py  api_client.py  dictionary.py  fuzzy_matcher.py  resolver.py
quarantine/: __init__.py  reprocessor.py  reviewer.py  store.py
tests/: test_csv_reader.py  test_fhir_assembler.py  test_integration.py  test_loinc_resolver.py  test_quarantine_store.py  test_reprocessor.py  test_transformer.py
tests/fixtures/: sample.csv
tools/: audit_dictionary.py  build_corpus.py  calibration_analysis.py  evaluate_accuracy.py  validate_config.py
